<resources>
    <string name="app_name">WGU Student Scheduler</string>
    <string name="app_add_term">Add Term</string>
    <string name="app_courses">Courses</string>
    <string name="add">Add</string>
    <string name="empty">Empty</string>
    <string name="name">Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="details">Details</string>
    <string name="data_saved">Data Saved</string>
    <string name="add_course">Add Course</string>
    <string name="app_update_term">Update Term</string>
    <string name="term_details">Term Details</string>
    <string name="course_details">Course Details</string>
    <string name="mentors">Mentors</string>
    <string name="notes">Notes</string>
    <string name="phone">Phone #</string>
    <string name="phone_hint">xxx-xxx-xxxx</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="update_course">Update Course</string>
    <string name="update_term">Update Term</string>
    <string name="remove_term">Remove Term</string>
    <string name="remove_course">Remove Course</string>
    <string name="add_mentor">Add Mentor</string>
    <string name="goal_date">Goal Date</string>
    <string name="status">Status</string>
    <string name="assessments">Assessments</string>
    <string name="alert_start_date">Alert Start Date</string>
    <string name="alert_end_date">Alert End Date</string>
    <string name="due_date">Due Date</string>
    <string name="type">Type</string>
    <string name="alert_goal_date">Alert Goal Date</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="update_assessment">Update Assessment</string>
    <string name="update_mentor">Update Mentor</string>
    <string name="add_note">Add Note</string>
    <string name="update_note">Update Note</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="menu_tail">Menu Tail</string>
    <string name="remove_mentor">Remove Mentor</string>
    <string name="remove_assessment">Remove Assessment</string>
    <string name="remove_note">Remove Note</string>
    <string name="remove_note_alert">Are you sure you want to remove this note?</string>
    <string name="note_details">Note Details</string>
    <string name="assessment_details">Assessment Details</string>
    <string name="mentor_details">Mentor Details</string>
    <string name="choose_email_client">Choose an Email client:</string>
    <string name="progress">Progress</string>
</resources>